# k8s-custom-controller-rs

./: Cargo.toml  README.md
.devcontainer/: Dockerfile  on-create.sh
.github/workflows/: ci.yml  release.yml
sample-custom-controller/: Cargo.toml  Dockerfile
sample-custom-controller/examples/: crdgen.rs
sample-custom-controller/src/: lib.rs  main.rs
