[workspace]
resolver = "3"
members = [
  "sample-custom-controller"
]

[workspace.package]
version = "0.1.0"
authors = ["9506hqwy"]
edition = "2024"
rust-version = "1.85"
repository = "https://github.com/9506hqwy/k8s-custom-controller-rs"
license = "MIT OR Apache-2.0"

[profile.release]
strip = "symbols"
lto = true
