[package]
name = "sample-custom-controller"
keywords = ["kubernetes"]
# https://crates.io/category_slugs
categories = ["web-programming::http-server"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
env_logger = "0.11.5"
futures-util = "0.3.31"
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "2.0.0", features = ["derive", "runtime"] }
log = "0.4.22"
schemars = "0.8.21"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
serde_yaml = "0.9.34"
